# anthology-sis

./: .env.example  .gitignore  README.md  pyproject.toml
src/anthology_sis/: __init__.py  cli.py  client.py  config.py  queries.py
tests/: test_client.py  test_queries.py
